[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "langchain-openai==0.2.11",
    "langchain==0.3.10",
    "pandas==2.2.3",
    "networkx==3.4.2",
    "networkx-graph==0.2.5",
    "flask-cors==5.0.0",
    "numpy>=1.26.4",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "werkzeug>=3.1.3",
    "duckdb>=1.3.2",
    "langchain-core>=0.3.63",
    "matplotlib>=3.10.5",
]
